@@ -22,9 +22,6 @@
 #include <stdarg.h>
 #include <errno.h>
 
-/* Apparently gnulib needs this, sigh.  */
-char *program_name;
-
 void
 unbuffer_standard_error (void)
 {
