@@ -38,6 +38,7 @@
 #include "b-isr.h"
 #include "gnu-h-v.h"
 #include "maketime.h"
+#include "progname.h"
 
 void
 exit_failurefully (void)
@@ -54,8 +55,8 @@ exit_diff_trouble (void)
 void
 gnurcs_init (struct program const *program)
 {
-  /* Apparently gnulib needs this, sigh.  */
-  program_name = (char *) program->name;
+  /* Help gnulib DTRT.  */
+  set_program_name (program->invoke);
 
   PLEXUS = make_space ("plexus");
   SINGLE = make_space ("single");
